--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,12 @@
 name = "rclone_ignore"
 version = "0.1.0"
 authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
-edition = "2018"
 
 [dependencies]
 notify = "4.0.6"
 ignore = "0.4.4"
 clap = "2.32.0"
 which = "2.0.1"
+tokio-process = "0.2.3"
+futures = "0.1.25"
+tokio = "0.1.13"
