Use `rayon` and threads instead of `tokio-process` and futures.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,4 @@ notify = "4.0.6"
 ignore = "0.4.4"
 clap = "2.32.0"
 which = "2.0.1"
-tokio-process = "0.2.3"
-futures = "0.1.25"
-tokio = "0.1.13"
+rayon = "1.0.3"
