--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rclone_ignore"
 version = "0.1.0"
 authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 notify = "4.0.6"
