--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,11 @@ num_cpus = "1.9.0"
 crossbeam = "0.7.1"
 
 [target.'cfg(windows)'.dependencies]
-winapi = "0.3.8"
-user32-sys = "*"
-kernel32-sys = "*"
+winapi = { version = "0.3.8", features = ["winuser"] }
 systray = "0.4.0"
 
 [target.'cfg(windows)'.build-dependencies]
-windres = "0.2"
+embed-resource = "1.3.2"
 
 [features]
 tray = []
